Commit end of class....